--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>знайди скарб</h1>
-    <img id="map" src="map.jpg" alt="map" width="450">
-    <p id="distance"></p>
+    <!-- <img id="map" src="map.jpg" alt="map" width="450"> -->
+    <canvas id="map" width="450" height="400" 
+    style="background-image: url(map.jpg)" ></canvas>
+    <p id="distance">result</p>
 
     <script src="script.js"></script>
 </body>
